Left side vertical MD scrollbars grow toward right.

This patch plumbs through the is_overlay and is_left_side_vertical_scrollbar flags for painted scrollbar layers.

BUG=661259
TEST=ScrollbarLayerTest.ThumbRectForOverlayLeftSideVerticalScrollbar
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_precise_blink_rel

Review-Url: https://codereview.chromium.org/2468423004
Cr-Commit-Position: refs/heads/master@{#430019}

Former-commit-id: b504ebcca5ba3e17640034a59f17af670a530d7d