cc/layers/painted_scrollbar_layer_impl.h
@@ -18,8 +18,12 @@ class ScrollView;
 
 class CC_EXPORT PaintedScrollbarLayerImpl : public ScrollbarLayerImplBase {
  public:
-  static std::unique_ptr<PaintedScrollbarLayerImpl>
-  Create(LayerTreeImpl* tree_impl, int id, ScrollbarOrientation orientation);
+  static std::unique_ptr<PaintedScrollbarLayerImpl> Create(
+      LayerTreeImpl* tree_impl,
+      int id,
+      ScrollbarOrientation orientation,
+      bool is_left_side_vertical_scrollbar,
+      bool is_overlay);
   ~PaintedScrollbarLayerImpl() override;
 
   // LayerImpl implementation.
@@ -55,7 +59,9 @@ class CC_EXPORT PaintedScrollbarLayerImpl : public ScrollbarLayerImplBase {
  protected:
   PaintedScrollbarLayerImpl(LayerTreeImpl* tree_impl,
                             int id,
-                            ScrollbarOrientation orientation);
+                            ScrollbarOrientation orientation,
+                            bool is_left_side_vertical_scrollbar,
+                            bool is_overlay);
 
   // ScrollbarLayerImplBase implementation.
   int ThumbThickness() const override;
