cc/test/fake_scrollbar.cc
@@ -10,20 +10,20 @@
 namespace cc {
 
 FakeScrollbar::FakeScrollbar()
-    : paint_(false),
-      has_thumb_(false),
-      is_overlay_(false),
-      thumb_thickness_(10),
-      thumb_length_(5),
-      thumb_opacity_(1),
-      needs_paint_thumb_(true),
-      needs_paint_track_(true),
-      track_rect_(0, 0, 100, 10),
-      fill_color_(SK_ColorGREEN) {}
+    : FakeScrollbar(false, false, HORIZONTAL, false, false) {}
 
 FakeScrollbar::FakeScrollbar(bool paint, bool has_thumb, bool is_overlay)
+    : FakeScrollbar(paint, has_thumb, HORIZONTAL, false, is_overlay) {}
+
+FakeScrollbar::FakeScrollbar(bool paint,
+                             bool has_thumb,
+                             ScrollbarOrientation orientation,
+                             bool is_left_side_vertical_scrollbar,
+                             bool is_overlay)
     : paint_(paint),
       has_thumb_(has_thumb),
+      orientation_(orientation),
+      is_left_side_vertical_scrollbar_(is_left_side_vertical_scrollbar),
       is_overlay_(is_overlay),
       thumb_thickness_(10),
       thumb_length_(5),
@@ -36,11 +36,11 @@ FakeScrollbar::FakeScrollbar(bool paint, bool has_thumb, bool is_overlay)
 FakeScrollbar::~FakeScrollbar() {}
 
 ScrollbarOrientation FakeScrollbar::Orientation() const {
-  return HORIZONTAL;
+  return orientation_;
 }
 
 bool FakeScrollbar::IsLeftSideVerticalScrollbar() const {
-  return false;
+  return is_left_side_vertical_scrollbar_;
 }
 
 gfx::Point FakeScrollbar::Location() const { return location_; }
